--- a/index.html
+++ b/index.html
@@ -3,63 +3,87 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Jordão Bragantini</title>
+    <title>jordão bragantini</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
     </header class="site-header">
     <div class="wrapper">
-        <a class="site-title" href="/">
-            jordão bragantini
-        </a>
+        jordão bragantini
         <nav class="site-nav">
-            <a href="assets/pdfs/cv.pdf">CV</a> |
-            <a href="https://github.com/JoOkuma/">Github</a> |
-            <a href="https://twitter.com/jobragantini">Twitter</a>
+            <a href="https://github.com/JoOkuma/">github</a> |
+            <a href="https://twitter.com/jobragantini">twitter</a>
         </nav>
     </div>
     <header>
         <div class="page-content">
             <div class="wrapper">
-                <p>I’m a computer vision and machine learning software engineer at <a href="https://www.czbiohub.org">Chan
-                        Zuckerberg Biohub</a>, where I develop methods and tools for processing terabytes of microscopy
-                    data. I obtained my MSc in Computer Science and BSc in Statistics from the University of Campinas,
-                    Brazil. During that time, I spent four wonderful years doing research at <a
-                        href="https://lids.ic.unicamp.br/">LIDS</a> under the supervision of <a
-                        href="https://scholar.google.com/citations?user=HTFEUaUAAAAJ">Prof. Alexandre Falcão</a>. In
-                    2019-2020, I was fortunate enough to do a research internship at <a
-                        href="http://ligm.u-pem.fr/">LIGM</a> under the supervision of <a
-                        href="https://scholar.google.com/citations?user=j-2_cT0AAAAJ">Prof. Laurent Najman</a>.</p>
-
+                <p>
+                    I’m a senior research scientist at <a href="https://www.czbiohub.org">Chan Zuckerberg Biohub</a> working at the intersection of AI and biology.
+                </p>
                 <div align="center">
-                    <video width="480" height="360" controls="" preload="none">
+                    <video width="480" height="433" autoplay controls="" preload="none">
                         <source src="assets/videos/embryo.mp4" type="video/mp4" />
                         <source src="assets/videos/embryo.webm" type="video/webm" />
                     </video>
                     <p>
-                        Zebra-fish embryo cell segmentation and tracking from <a class="citation"
-                            href="#yang2022daxi">[1]</a>;
-                    </p>
-                    <p>
-                        <strong>Download video:</strong>
-                        <a href="assets/videos/embryo.mp4">mp4</a> or <a href="assets/videos/embryo.webm">webm</a>
+                        Multi-terabyte 3D video of developing zebrafish embryo cells tracked with <a class="citation"
+                            href="#bragantini2024ultrack">ultrack</a>;
                     </p>
                 </div>
-
                 <h3 id="publications">Publications</h3>
                 <ol class="bibliography">
                     <li>
-                        <span id="lange2023zebrahub">M. Lange, A. Granados, S. VijayKumar, J. Bragantini, S. Ancheta,
-                            S. Santhosh, and others,
+                        <span id="bragantini2024ultrack">
+                            J. Bragantini, I. Theodoro, X. Zhao, T. APM H., E. Hirata-Miyasaki, S. VijayKumar, A. Balasubramanian, and others.
+                            <span style="font-weight: 400">
+                                “Ultrack: pushing the limits of cell tracking across biological scales,”
+                            </span>
+                            bioRxiv, 2024.
+                        </span>
+                        | <a href="https://www.biorxiv.org/content/10.1101/2024.09.02.610652.full.pdf">pdf</a>
+                        | <a href="https://github.com/royerlab/ultrack">github</a>
+                    </li>
+                    <li>
+                        <span id="lange2024zebrahub">
+                            M. Lange, A. Granados, S. VijayKumar, J. Bragantini, S. Ancheta, S. Santhosh, and others,
                             <span style="font-weight: 400">
                                 “Zebrahub–Multimodal Zebrafish Developmental Atlas Reveal the State-Transition Dynamics of
                                 Late-Vertebrate Pluripotent Axial Progenitors,”
                             </span>
-                            bioRxiv, 2023.
+                            Cell, 2024.
                         </span>
                         | <a href="https://zebrahub.ds.czbiohub.org">website</a>
                         | <a href="https://www.biorxiv.org/content/10.1101/2023.03.06.531398v2.full.pdf">pdf</a>
+                    </li>
+                    <li>
+                        <span id="bragantini2024eccv">
+                            J. Bragantini, M. Lange, and L. A. Royer,
+                            <span style="font-weight: 400">
+                                “Large-Scale Multi-Hypotheses Cell Tracking Using Ultrametric Contours Maps,”
+                            </span>
+                            ECCV, 2024.
+                        </span>
+                        | <a href="https://arxiv.org/pdf/2308.04526">pdf</a>
+                    </li>
+                    <li>
+                        <span id="elizabeth2024mcp">
+                            E., Elizabeth, B. Moretti, B. H. Schlomann, J. Bragantini, M. Lange, X. Zhao, and others,
+                            <span style="font-weight: 400">
+                                “Single-cell transcriptional dynamics in a living vertebrate,”
+                            </span>
+                            bioRxiv, 2024.
+                    </li>
+                    <li>
+                        <span id="moore2023omezarr">
+                            J. Moore, D. Basurto-Lozada, S. Besson, J. Bogovic, J. Bragantini, E. M. Brown, J.-M. Burel, and others,
+                            <span style="font-weight: 400">
+                                “OME-Zarr: a cloud-optimized bioimaging file format with international community support,”
+                            </span>
+                            Histochemistry and Cell Biology, 2023.
+                        </span>
+                        | <a href="https://cimini-lab.broadinstitute.org/files/ciminilab/files/33_moore_histochem_2023.pdf">pdf</a>
                     </li>
                     <li>
                         <span id="silva2022differential">
