adding thesis and updating publications

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <div class="wrapper">
         jordão bragantini
         <nav class="site-nav">
-            <a href="https://github.com/JoOkuma/">github</a> |
-            <a href="https://twitter.com/jobragantini">twitter</a>
+            <a href="https://github.com/JoOkuma/">github</a>
         </nav>
     </div>
     <header>
         <div class="page-content">
             <div class="wrapper">
                 <p>
-                    I’m a senior research scientist at <a href="https://www.czbiohub.org">Chan Zuckerberg Biohub</a> working at the intersection of AI and biology.
+                    I’m senior research scientist at <a href="https://www.biohub.org">Biohub</a> working at the intersection of AI and biology.
                 </p>
                 <div align="center">
                     <video width="480" height="433" autoplay controls="" preload="none">
@@ -29,49 +28,65 @@
                     </video>
                     <p>
                         Multi-terabyte 3D video of developing zebrafish embryo cells tracked with <a class="citation"
-                            href="#bragantini2024ultrack">ultrack</a>;
+                            href="#bragantini2025ultrack">ultrack</a>;
                     </p>
                 </div>
                 <h3 id="publications">Publications</h3>
+                <div align="center" style="margin-bottom: 20px;">
+                    <img src="assets/figs/nmethods_cover.png" alt="Nature Methods Cover" style="width: 250px; height: auto;" />
+                    <p style="font-size: 0.9em; font-style: italic; margin-top: 5px;">
+                        Ultrack featured on the cover of Nature Methods
+                    </p>
+                </div>
                 <ol class="bibliography">
                     <li>
-                        <span id="bragantini2024ultrack">
-                            J. Bragantini, I. Theodoro, X. Zhao, T. APM H., E. Hirata-Miyasaki, S. VijayKumar, A. Balasubramanian, and others.
+                        <span id="bragantini2025ultrack">
+                            J. Bragantini, I. Theodoro, X. Zhao, T. A. Huijben, E. Hirata-Miyasaki, S. VijayKumar, A. Balasubramanian, and others.
                             <span style="font-weight: 400">
-                                “Ultrack: pushing the limits of cell tracking across biological scales,”
+                                "Ultrack: pushing the limits of cell tracking across biological scales,"
                             </span>
-                            bioRxiv, 2024.
+                            Nature Methods, 2025.
                         </span>
-                        | <a href="https://www.biorxiv.org/content/10.1101/2024.09.02.610652.full.pdf">pdf</a>
+                        | <a href="https://doi.org/10.1038/s41592-025-02778-0">link</a>
                         | <a href="https://github.com/royerlab/ultrack">github</a>
                     </li>
                     <li>
-                        <span id="lange2024zebrahub">
-                            M. Lange, A. Granados, S. VijayKumar, J. Bragantini, S. Ancheta, S. Santhosh, and others,
+                        <span id="huijben2025intracktive">
+                            T. A. Huijben, A. G. Anderson III, A. Sweet, E. Hoops, C. Larsen, K. Awayan, J. Bragantini, and others,
                             <span style="font-weight: 400">
-                                “Zebrahub–Multimodal Zebrafish Developmental Atlas Reveal the State-Transition Dynamics of
-                                Late-Vertebrate Pluripotent Axial Progenitors,”
+                                "intracktive: a web-based tool for interactive cell tracking visualization,"
+                            </span>
+                            Nature Methods, 2025.
+                        </span>
+                        | <a href="https://doi.org/10.1038/s41592-025-02805-0">link</a>
+                    </li>
+                    <li>
+                        <span id="lange2024zebrahub">
+                            M. Lange, A. Granados, S. VijayKumar, J. Bragantini, S. Ancheta, Y.-J. Kim, S. Santhosh, and others,
+                            <span style="font-weight: 400">
+                                "A multimodal zebrafish developmental atlas reveals the state-transition dynamics of late-vertebrate pluripotent axial progenitors,"
                             </span>
                             Cell, 2024.
                         </span>
                         | <a href="https://zebrahub.ds.czbiohub.org">website</a>
-                        | <a href="https://www.biorxiv.org/content/10.1101/2023.03.06.531398v2.full.pdf">pdf</a>
+                        | <a href="https://doi.org/10.1016/j.cell.2024.09.047">link</a>
                     </li>
                     <li>
                         <span id="bragantini2024eccv">
                             J. Bragantini, M. Lange, and L. A. Royer,
                             <span style="font-weight: 400">
-                                “Large-Scale Multi-Hypotheses Cell Tracking Using Ultrametric Contours Maps,”
+                                "Large-Scale Multi-Hypotheses Cell Tracking Using Ultrametric Contours Maps,"
                             </span>
-                            ECCV, 2024.
+                            European Conference on Computer Vision (ECCV), 2024.
                         </span>
+                        | <a href="https://doi.org/10.1007/978-3-031-72986-7_3">link</a>
                         | <a href="https://arxiv.org/pdf/2308.04526">pdf</a>
                     </li>
                     <li>
-                        <span id="elizabeth2024mcp">
-                            E., Elizabeth, B. Moretti, B. H. Schlomann, J. Bragantini, M. Lange, X. Zhao, and others,
+                        <span id="eck2024mcp">
+                            E. Eck, B. Moretti, B. H. Schlomann, J. Bragantini, M. Lange, X. Zhao, and others,
                             <span style="font-weight: 400">
-                                “Single-cell transcriptional dynamics in a living vertebrate,”
+                                "Single-cell transcriptional dynamics in a living vertebrate,"
                             </span>
                             bioRxiv, 2024.
                     </li>
